Add basic web view search panel support

--- a/client/jetbrains/src/main/resources/html/index.html
+++ b/client/jetbrains/src/main/resources/html/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Sourcegraph</title>
+    <meta charset="utf-8"/>
 </head>
 <body>
-$END$
+    Hello world!
 </body>
 </html>
