Fix warnings in standalone index.html

--- a/client/jetbrains/standalone/src/index.html
+++ b/client/jetbrains/standalone/src/index.html
@@ -1,19 +1,18 @@
-<html>
+<html lang="en">
 <head>
   <title>Sourcegraph for JetBrains</title>
-  <style type="text/css">
-    html, body {
-      margin: 0;
-      background-color: #3c3f41;
-      color: #bbbbbb;
-      font-size: 13px;
-      font-family: 'DejaVu Sans', sans-serif;
-    }
+  <style>
+      html, body {
+          margin: 0;
+          background-color: #3c3f41;
+          color: #bbbbbb;
+          font-size: 13px;
+          font-family: 'DejaVu Sans', sans-serif;
+      }
 
     #modal {
       display: flex;
       flex-direction: column;
-      margin: auto;
       align-items: center;
       margin: 20px 0;
     }
