Add JS side of the bridge and dark/light theme setting
- Build the bridge interface on the JS side
- Set dark/light theme class at initialization
- Update standalone version to work well with the changes (always loads dark mode).

--- a/client/jetbrains/standalone/src/index.html
+++ b/client/jetbrains/standalone/src/index.html
@@ -49,7 +49,7 @@
 <body>
   <div id="modal">
     <div id="title">Sourcegraph for JetBrains</div>
-    <iframe id="webview" src="/html/index.html" width="100%" height="100%"></iframe>
+      <iframe height="100%" id="webview" src="/html/index.html?standalone=true" width="100%"></iframe>
     <pre id="code-details">let message: string = 'Hello, TypeScript!';
 
 let heading = document.createElement('h1');
