--- a/cmd/frontend/internal/app/ui/app.html
+++ b/cmd/frontend/internal/app/ui/app.html
@@ -87,25 +87,24 @@
 	{{ end }}
 	{{.Injected.BodyTop}}
 	<div id="root">
-        {{ if .Context.SourcegraphDotComMode }}
-            <script>
-                function canRunSourceGraph() {
-                    "use strict";
+        <script>
+            function canRunSourceGraph() {
+                "use strict";
 
-                    if (typeof Symbol == "undefined") return false;
-                    try {
-                        eval("class Foo {}");
-                        eval("var bar = (x) => x+1");
-                    } catch (e) { return false; }
+                if (typeof Symbol == "undefined") return false;
+                try {
+                    eval("class Foo {}");
+                    eval("var bar = (x) => x+1");
+                } catch (e) { return false; }
 
-                    return true;
-                }
-                if (!canRunSourceGraph()) {
-                    var element = document.getElementById("root");
-                    element.innerHTML="It looks like your current browser does not support Sourcegraph, Please upgrade to a modern browser such as <a href=\"https://www.google.com/chrome/downloads\">Chrome</a> or <a href=\"https://www.mozilla.org/en-US/firefox/new/\">Firefox</a>"
-                }
-            </script>
-        {{ end }}
+                return true;
+            }
+            if ( window.context.RedirectEs5 && !canRunSourceGraph()) {
+                var element = document.getElementById("root");
+                document.getElementById("bundle-load").remove();
+                element.innerHTML="It looks like your current browser does not support Sourcegraph, Please upgrade to a modern browser such as <a href=\"https://www.google.com/chrome/downloads\">Chrome</a> or <a href=\"https://www.mozilla.org/en-US/firefox/new/\">Firefox</a>"
+            }
+        </script>
     </div>
 	<noscript>
 		<p>Sourcegraph is a web-based code search and navigation tool for dev teams. Search, navigate, and review code. Find answers.</p>
@@ -115,10 +114,12 @@
 		<br>
 		You need to enable JavaScript to run this app.
 	</noscript>
-	{{if .Manifest.AppJSRuntimeBundlePath}}<script src="{{.Manifest.AppJSRuntimeBundlePath}}"></script>{{end}}
-	<script src="{{.Manifest.ReactJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
-	<script src="{{.Manifest.AppJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
-	{{.Injected.BodyBottom}}
+    <div id="bundle-load">
+        {{if .Manifest.AppJSRuntimeBundlePath}}<script src="{{.Manifest.AppJSRuntimeBundlePath}}"></script>{{end}}
+        <script src="{{.Manifest.ReactJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
+        <script src="{{.Manifest.AppJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
+        {{.Injected.BodyBottom}}
+    </div>
 </body>
 
 </html>
