--- a/cmd/frontend/internal/app/ui/app.html
+++ b/cmd/frontend/internal/app/ui/app.html
@@ -85,20 +85,13 @@
 	{{.Injected.BodyTop}}
 	<div id="root">
         <script>
-            function canRunSourceGraph() {
-                "use strict";
-                if (typeof Symbol == "undefined") return false;
-                try {
-                    eval("class Foo {}");
-                    eval("var bar = (x) => x+1");
-                } catch (e) { return false; }
-
-                return true;
-            }
-            if ( window.context.RedirectEs5 && !canRunSourceGraph()) {
-                var element = document.getElementById("root");
-                document.getElementById("bundle-load").remove();
-                element.innerHTML="It looks like your current browser does not support Sourcegraph, Please upgrade to a modern browser such as <a href=\"https://www.google.com/chrome/downloads\">Chrome</a> or <a href=\"https://www.mozilla.org/en-US/firefox/new/\">Firefox</a>"
+            if (window.context.experimentalFeatures.RedirectEs5) {
+                function canRunSourceGraph(){"use strict";if("undefined"==typeof Symbol)return!1;try{eval("class Foo {}"),eval("var bar = (x) => x+1")}catch(r){return!1}return!0}
+                if (!canRunSourceGraph()) {
+                    document.write("<h1>It looks like your current browser does not support Sourcegraph, Please upgrade to a modern browser such as <a href=\"https://www.google.com/chrome/downloads\">Chrome</a> or <a href=\"https://www.mozilla.org/en-US/firefox/new/\">Firefox</a></h1>")
+                    // makes everything below disabled so no crashes
+                    document.write('<!--');
+                }
             }
         </script>
     </div>
@@ -110,12 +103,10 @@
 		<br>
 		You need to enable JavaScript to run this app.
 	</noscript>
-    <div id="bundle-load">
-        {{if .Manifest.AppJSRuntimeBundlePath}}<script src="{{.Manifest.AppJSRuntimeBundlePath}}"></script>{{end}}
-        <script src="{{.Manifest.ReactJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
-        <script src="{{.Manifest.AppJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
-        {{.Injected.BodyBottom}}
-    </div>
+    {{if .Manifest.AppJSRuntimeBundlePath}}<script src="{{.Manifest.AppJSRuntimeBundlePath}}"></script>{{end}}
+    <script src="{{.Manifest.ReactJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
+    <script src="{{.Manifest.AppJSBundlePath}}" {{if .Manifest.IsModule}}type="module"{{end}}></script>
+    {{.Injected.BodyBottom}}
 </body>
 
 </html>
